Create a single file operator-install.yaml bundle to install the operator

--- a/deploy/clusterrole_binding.yaml
+++ b/deploy/clusterrole_binding.yaml
@@ -9,4 +9,5 @@ roleRef:
 subjects:
 - kind: ServiceAccount
   name: infinispan-operator
-
+# Replace namespace name on the next line if you are deploying to the different project/namespace
+  namespace: infinispan-operator
