ISPN-12140 OS service CA encryption

--- a/documentation/asciidoc/topics/yaml_annotated/cr_tls_secret.yaml
+++ b/documentation/asciidoc/topics/yaml_annotated/cr_tls_secret.yaml
@@ -2,5 +2,5 @@ spec:
   ...
   security:
     endpointEncryption: <1>
-            type: secret <2>
+            type: Secret <2>
             certSecretName: tls-secret <3>
