--- a/documentation/asciidoc/topics/yaml_annotated/cr_tls_service.yaml
+++ b/documentation/asciidoc/topics/yaml_annotated/cr_tls_service.yaml
@@ -2,6 +2,6 @@ spec:
   ...
   security:
     endpointEncryption: <1>
-            type: service <2>
+            type: Service <2>
             certServiceName: service.beta.openshift.io <3>
             certSecretName: tls-secret <4>
