Compare ignorecase endpointEncryption.Type

--- a/deploy/cr/tls/cr_minimal_with_tls.yaml
+++ b/deploy/cr/tls/cr_minimal_with_tls.yaml
@@ -7,10 +7,10 @@ spec:
   security:
     endpointEncryption:
             # Define the certificate to encrypt endpoint traffic.
-            # `type: service` uses platform service certificate.
-            # `type: secret` uses custom certificates.
-            type: secret
-            # If `type: service`, uncomment the following `certServiceName` line:
+            # `type: Service` uses platform service certificate.
+            # `type: Secret` uses custom certificates.
+            type: Secret
+            # If `type: Service`, uncomment the following `certServiceName` line:
             # certServiceName: service.beta.openshift.io
             # Name the secret that contains encryption certificates.
             certSecretName: tls-secret
