--- a/deploy/operator-install.yaml
+++ b/deploy/operator-install.yaml
@@ -710,7 +710,7 @@ spec:
       serviceAccountName: infinispan-operator
       containers:
         - name: infinispan-operator
-          image: jboss/infinispan-operator:latest
+          image: quay.io/infinispan/operator:2.0.x
           ports:
           - containerPort: 60000
             name: metrics
