--- a/deploy/olm-catalog/infinispan-operator.clusterserviceversion.yaml
+++ b/deploy/olm-catalog/infinispan-operator.clusterserviceversion.yaml
@@ -225,6 +225,7 @@ spec:
     owned:
       - description: Cache is the Schema for the caches API
         kind: Cache
+        displayName: Infinispan Cache
         name: caches.infinispan.org
         version: v2alpha1
       - name: infinispans.infinispan.org
