--- a/deploy/olm-catalog/infinispan-operator.clusterserviceversion.yaml
+++ b/deploy/olm-catalog/infinispan-operator.clusterserviceversion.yaml
@@ -140,6 +140,19 @@ spec:
             verbs:
               - '*'
           - apiGroups:
+              - route.openshift.io
+            resources:
+              - routes
+              - routes/custom-host
+            verbs:
+              - '*'
+          - apiGroups:
+              - networking.k8s.io
+            resources:
+              - ingresses
+            verbs:
+              - '*'
+          - apiGroups:
               - monitoring.coreos.com
             resources:
               - servicemonitors
@@ -160,6 +173,9 @@ spec:
             resources:
               - nodes
               - nodes/status
+              - nodes/metrics
+              - nodes/spec
+              - nodes/stats
             verbs:
               - get
               - list
@@ -173,19 +189,6 @@ spec:
               - get
               - list
               - watch
-          - apiGroups:
-              - ""
-            resources:
-              - nodes/metrics
-              - nodes/spec
-            verbs:
-              - get
-          - apiGroups:
-              - ""
-            resources:
-              - nodes/stats
-            verbs:
-              - get
       deployments:
         - name: infinispan-operator
           spec:
