Flag for disabling autoscale #435

--- a/deploy/crds/infinispan.org_infinispans_crd.yaml
+++ b/deploy/crds/infinispan.org_infinispans_crd.yaml
@@ -34,6 +34,8 @@ spec:
             autoscale:
               description: Autoscale describe autoscaling configuration for the cluster
               properties:
+                disabled:
+                  type: boolean
                 maxMemUsagePercent:
                   type: integer
                 maxReplicas:
