--- a/deploy/operator-install.yaml
+++ b/deploy/operator-install.yaml
@@ -174,6 +174,8 @@ spec:
             autoscale:
               description: Autoscale describe autoscaling configuration for the cluster
               properties:
+                disabled:
+                  type: boolean
                 maxMemUsagePercent:
                   type: integer
                 maxReplicas:
