changed to pointer some structs #498

--- a/deploy/operator-install.yaml
+++ b/deploy/operator-install.yaml
@@ -245,9 +245,14 @@ spec:
                     certServiceName:
                       type: string
                     type:
+                      description: CertificateSourceType specifies all the possible
+                        sources for the encryption certificate
+                      enum:
+                      - Service
+                      - service
+                      - Secret
+                      - secret
                       type: string
-                  required:
-                  - type
                   type: object
                 endpointSecretName:
                   type: string
@@ -361,9 +366,14 @@ spec:
                     certServiceName:
                       type: string
                     type:
+                      description: CertificateSourceType specifies all the possible
+                        sources for the encryption certificate
+                      enum:
+                      - Service
+                      - service
+                      - Secret
+                      - secret
                       type: string
-                  required:
-                  - type
                   type: object
                 endpointSecretName:
                   type: string
