--- a/deploy/crds/infinispan.org_infinispans_crd.yaml
+++ b/deploy/crds/infinispan.org_infinispans_crd.yaml
@@ -105,9 +105,14 @@ spec:
                     certServiceName:
                       type: string
                     type:
+                      description: CertificateSourceType specifies all the possible
+                        sources for the encryption certificate
+                      enum:
+                      - Service
+                      - service
+                      - Secret
+                      - secret
                       type: string
-                  required:
-                  - type
                   type: object
                 endpointSecretName:
                   type: string
@@ -221,9 +226,14 @@ spec:
                     certServiceName:
                       type: string
                     type:
+                      description: CertificateSourceType specifies all the possible
+                        sources for the encryption certificate
+                      enum:
+                      - Service
+                      - service
+                      - Secret
+                      - secret
                       type: string
-                  required:
-                  - type
                   type: object
                 endpointSecretName:
                   type: string
