--- a/deploy/clusterrole.yaml
+++ b/deploy/clusterrole.yaml
@@ -7,13 +7,10 @@ rules:
   - ""
   resources:
   - nodes
-  - nodes/status
-  - nodes/metrics
-  - nodes/spec
-  - nodes/stats
   verbs:
   - get
   - list
+  - watch
 - apiGroups:
   - apiextensions.k8s.io
   resources:
