--- a/deploy/operator-install.yaml
+++ b/deploy/operator-install.yaml
@@ -90,13 +90,10 @@ rules:
   - ""
   resources:
   - nodes
-  - nodes/status
-  - nodes/metrics
-  - nodes/spec
-  - nodes/stats
   verbs:
   - get
   - list
+  - watch
 - apiGroups:
   - apiextensions.k8s.io
   resources:
