#388 Specify StorageClassName for PVC

--- a/deploy/crds/infinispan.org_infinispans_crd.yaml
+++ b/deploy/crds/infinispan.org_infinispans_crd.yaml
@@ -131,6 +131,8 @@ spec:
                       type: boolean
                     storage:
                       type: string
+                    storageClassName:
+                      type: string
                   type: object
                 replicationFactor:
                   format: int32
