--- a/deploy/clusterrole.yaml
+++ b/deploy/clusterrole.yaml
@@ -21,3 +21,10 @@ rules:
   verbs:
   - get
   - list
+- apiGroups:
+    - storage.k8s.io
+  resources:
+    - storageclasses
+  verbs:
+    - get
+    - watch
