--- a/documentation/asciidoc/topics/yaml_annotated/cr_backup_site.yaml
+++ b/documentation/asciidoc/topics/yaml_annotated/cr_backup_site.yaml
@@ -14,3 +14,7 @@ spec:
       - name: NYC
         url: openshift://api.site-b.devcluster.openshift.com:6443
         secretName: nyc-token
+  logging:
+    categories:
+      org.jgroups.protocols.TCP: error <8>
+      org.jgroups.protocols.relay.RELAY2: fatal <9>
