--- a/deploy/role.yaml
+++ b/deploy/role.yaml
@@ -8,10 +8,12 @@ rules:
 - apiGroups:
   - ""
   resources:
+  - persistentvolumeclaims
   - services
   - services/finalizers
   - endpoints
   - configmaps
+  - pods
   - secrets
   verbs:
   - get
@@ -20,15 +22,6 @@ rules:
   - create
   - update
   - delete
-- apiGroups:
-  - ""
-  resources:
-  - pods
-  verbs:
-  - get
-  - list
-  - watch
-  - update
 - apiGroups:
   - ""
   resources:
@@ -89,6 +82,12 @@ rules:
   - caches
   - caches/status
   - caches/finalizers
+  - backups
+  - backups/status
+  - backups/finalizers
+  - restores
+  - restores/status
+  - restores/finalizers
   verbs:
   - get
   - list
