--- a/deploy/operator-install.yaml
+++ b/deploy/operator-install.yaml
@@ -7,6 +7,8 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: infinispan-operator
+  labels:
+    name: infinispan-operator
 
 ---
 
@@ -14,6 +16,8 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
   name: infinispan-operator
+  labels:
+    name: infinispan-operator
 rules:
 - apiGroups:
   - ""
@@ -85,6 +89,8 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
   name: infinispan-operator
+  labels:
+    name: infinispan-operator
 rules:
 - apiGroups:
   - ""
@@ -109,6 +115,8 @@ kind: RoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: infinispan-operator
+  labels:
+    name: infinispan-operator
 subjects:
   - kind: ServiceAccount
     name: infinispan-operator
@@ -123,6 +131,8 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
   name: infinispan-operator
+  labels:
+    name: infinispan-operator
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
@@ -139,6 +149,8 @@ apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
   name: infinispans.infinispan.org
+  labels:
+    name: infinispan-operator
 spec:
   group: infinispan.org
   names:
@@ -394,6 +406,8 @@ apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
   name: caches.infinispan.org
+  labels:
+    name: infinispan-operator
 spec:
   group: infinispan.org
   names:
@@ -519,6 +533,8 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: infinispan-operator
+  labels:
+    name: infinispan-operator
 spec:
   replicas: 1
   selector:
