--- a/deploy/role_binding.yaml
+++ b/deploy/role_binding.yaml
@@ -2,6 +2,8 @@ kind: RoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: infinispan-operator
+  labels:
+    name: infinispan-operator
 subjects:
   - kind: ServiceAccount
     name: infinispan-operator
