--- a/deploy/operator-install.yaml
+++ b/deploy/operator-install.yaml
@@ -543,3 +543,5 @@ spec:
                   fieldPath: metadata.name
             - name: OPERATOR_NAME
               value: "infinispan-operator"
+            - name: DEFAULT_IMAGE
+              value: "infinispan/server:11.0"
