ISPN-12372 docs for storageclass

--- a/documentation/asciidoc/topics/yaml_annotated/cr_container_storage.yaml
+++ b/documentation/asciidoc/topics/yaml_annotated/cr_container_storage.yaml
@@ -4,3 +4,5 @@ spec:
     type: DataGrid
     container:
       storage: 2Gi <1>
+      ephemeralStorage: false <2>
+      storageClassName: my-storage-class <2>
