ISPN-12372 docs for StorageClass

--- a/documentation/asciidoc/topics/yaml/datagrid_service.yaml
+++ b/documentation/asciidoc/topics/yaml/datagrid_service.yaml
@@ -12,6 +12,7 @@ spec:
     # Configures storage resources.
     container:
       storage: 2Gi
+      storageClassName: my-storage-class
     # Configures cross-site replication.
     sites:
       local:
