--- a/test-integration/pom.xml
+++ b/test-integration/pom.xml
@@ -11,14 +11,14 @@
 
     <properties>
         <!-- Dependencies versions -->
-        <version.infinispan>10.0.1.Final</version.infinispan>
-        <version.fabric8>4.6.1</version.fabric8>
+        <version.infinispan>12.0.0.Dev04</version.infinispan>
+        <version.fabric8>4.10.2</version.fabric8>
         <version.junit>5.3.0</version.junit>
         <version.lombok>1.16.10</version.lombok>
         <version.logback>1.1.3</version.logback>
-        <version.slf4j>1.7.12</version.slf4j>
+        <version.slf4j>1.7.30</version.slf4j>
         <version.verifier>1.5</version.verifier>
-        <version.xtf>0.14</version.xtf>
+        <version.xtf>0.18</version.xtf>
 
         <!-- Plugin versions -->
         <version.maven.compiler>3.8.1</version.maven.compiler>
