--- a/deploy/olm-catalog/infinispan-operator.clusterserviceversion.yaml
+++ b/deploy/olm-catalog/infinispan-operator.clusterserviceversion.yaml
@@ -36,7 +36,7 @@ metadata:
         }
       ]
     description: Create and manage Infinispan clusters.
-    containerImage: docker.io/jboss/infinispan-operator:latest
+    containerImage: quay.io/infinispan/operator:2.0.x
     createdAt: 2000-01-01T12:00:00Z
     support: Infinispan
     certified: "false"
@@ -71,7 +71,7 @@ spec:
   replaces: infinispan-operator.v9.9.8
   relatedImages:
     - name: infinispan-server
-      image: infinispan/server:latest
+      image: quay.io/infinispan/server:11.0
   labels:
     operated-by: infinispan-operator
   selector:
@@ -203,7 +203,7 @@ spec:
                   - name: infinispan-operator
                     command:
                       - infinispan-operator
-                    image: jboss/infinispan-operator:latest
+                    image: quay.io/infinispan/operator:2.0.x
                     ports:
                       - containerPort: 60000
                         name: metrics
@@ -219,7 +219,7 @@ spec:
                       - name: OPERATOR_NAME
                         value: "infinispan-operator"
                       - name: DEFAULT_IMAGE
-                        value: "infinispan/server:latest"
+                        value: "quay.io/infinispan/server:11.0"
   customresourcedefinitions:
     owned:
       - description: Cache is the Schema for the caches API
