--- a/deploy/crds/infinispan.org_infinispans_crd.yaml
+++ b/deploy/crds/infinispan.org_infinispans_crd.yaml
@@ -2,8 +2,6 @@ apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
   name: infinispans.infinispan.org
-  labels:
-    name: infinispan-operator
 spec:
   group: infinispan.org
   names:
@@ -170,16 +168,19 @@ spec:
                     locations:
                       items:
                         properties:
+                          host:
+                            type: string
                           name:
                             type: string
+                          port:
+                            format: int32
+                            type: integer
                           secretName:
                             type: string
                           url:
                             type: string
                         required:
                         - name
-                        - secretName
-                        - url
                         type: object
                       type: array
                   required:
