--- a/deploy/operator-install.yaml
+++ b/deploy/operator-install.yaml
@@ -184,8 +184,6 @@ apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
   name: infinispans.infinispan.org
-  labels:
-    name: infinispan-operator
 spec:
   group: infinispan.org
   names:
@@ -352,16 +350,19 @@ spec:
                     locations:
                       items:
                         properties:
+                          host:
+                            type: string
                           name:
                             type: string
+                          port:
+                            format: int32
+                            type: integer
                           secretName:
                             type: string
                           url:
                             type: string
                         required:
                         - name
-                        - secretName
-                        - url
                         type: object
                       type: array
                   required:
@@ -442,8 +443,6 @@ apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
   name: caches.infinispan.org
-  labels:
-    name: infinispan-operator
 spec:
   group: infinispan.org
   names:
