--- a/deploy/crds/infinispan.org_infinispans_crd.yaml
+++ b/deploy/crds/infinispan.org_infinispans_crd.yaml
@@ -66,6 +66,10 @@ spec:
             expose:
               description: ExposeSpec describe how Infinispan will be exposed externally
               properties:
+                annotations:
+                  additionalProperties:
+                    type: string
+                  type: object
                 host:
                   type: string
                 nodePort:
@@ -143,6 +147,10 @@ spec:
                           description: ExposeSpec describe how Infinispan will be
                             exposed externally
                           properties:
+                            annotations:
+                              additionalProperties:
+                                type: string
+                              type: object
                             host:
                               type: string
                             nodePort:
