--- a/deploy/operator-install.yaml
+++ b/deploy/operator-install.yaml
@@ -248,6 +248,10 @@ spec:
             expose:
               description: ExposeSpec describe how Infinispan will be exposed externally
               properties:
+                annotations:
+                  additionalProperties:
+                    type: string
+                  type: object
                 host:
                   type: string
                 nodePort:
@@ -325,6 +329,10 @@ spec:
                           description: ExposeSpec describe how Infinispan will be
                             exposed externally
                           properties:
+                            annotations:
+                              additionalProperties:
+                                type: string
+                              type: object
                             host:
                               type: string
                             nodePort:
