--- a/deploy/operator-install.yaml
+++ b/deploy/operator-install.yaml
@@ -184,6 +184,8 @@ apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
   name: infinispans.infinispan.org
+  labels:
+    name: infinispan-operator
 spec:
   group: infinispan.org
   names:
@@ -451,6 +453,8 @@ apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
   name: caches.infinispan.org
+  labels:
+    name: infinispan-operator
 spec:
   group: infinispan.org
   names:
