--- a/deploy/crds/infinispan.org_infinispans_crd.yaml
+++ b/deploy/crds/infinispan.org_infinispans_crd.yaml
@@ -68,6 +68,10 @@ spec:
             expose:
               description: ExposeSpec describe how Infinispan will be exposed externally
               properties:
+                annotations:
+                  additionalProperties:
+                    type: string
+                  type: object
                 host:
                   type: string
                 nodePort:
@@ -145,6 +149,10 @@ spec:
                           description: ExposeSpec describe how Infinispan will be
                             exposed externally
                           properties:
+                            annotations:
+                              additionalProperties:
+                                type: string
+                              type: object
                             host:
                               type: string
                             nodePort:
@@ -170,16 +178,19 @@ spec:
                     locations:
                       items:
                         properties:
+                          host:
+                            type: string
                           name:
                             type: string
+                          port:
+                            format: int32
+                            type: integer
                           secretName:
                             type: string
                           url:
                             type: string
                         required:
                         - name
-                        - secretName
-                        - url
                         type: object
                       type: array
                   required:
