--- a/deploy/operator-install.yaml
+++ b/deploy/operator-install.yaml
@@ -250,6 +250,10 @@ spec:
             expose:
               description: ExposeSpec describe how Infinispan will be exposed externally
               properties:
+                annotations:
+                  additionalProperties:
+                    type: string
+                  type: object
                 host:
                   type: string
                 nodePort:
@@ -327,6 +331,10 @@ spec:
                           description: ExposeSpec describe how Infinispan will be
                             exposed externally
                           properties:
+                            annotations:
+                              additionalProperties:
+                                type: string
+                              type: object
                             host:
                               type: string
                             nodePort:
@@ -352,16 +360,19 @@ spec:
                     locations:
                       items:
                         properties:
+                          host:
+                            type: string
                           name:
                             type: string
+                          port:
+                            format: int32
+                            type: integer
                           secretName:
                             type: string
                           url:
                             type: string
                         required:
                         - name
-                        - secretName
-                        - url
                         type: object
                       type: array
                   required:
