--- a/deploy/operator-install.yaml
+++ b/deploy/operator-install.yaml
@@ -683,6 +683,8 @@ apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
   name: restores.infinispan.org
+  labels:
+    name: infinispan-operator
 spec:
   group: infinispan.org
   names:
