--- a/deploy/operator.yaml
+++ b/deploy/operator.yaml
@@ -35,5 +35,5 @@ spec:
                   fieldPath: metadata.name
             - name: OPERATOR_NAME
               value: "infinispan-operator"
-            - name: DEFAULT_IMAGE
+            - name: RELATED_IMAGE_OPENJDK
               value: "infinispan/server:12.0"
