--- a/deploy/olm-catalog/infinispan-operator.clusterserviceversion.yaml
+++ b/deploy/olm-catalog/infinispan-operator.clusterserviceversion.yaml
@@ -291,6 +291,8 @@ spec:
       url: https://blog.infinispan.org/
     - name: Documentation
       url: https://infinispan.org/
+    - name: Chat
+      url: https://infinispan.zulipchat.com/#narrow/stream/185835-infinispan-cloud
     - name: Quickstart
       url: https://github.com/infinispan/infinispan-simple-tutorials/tree/master/operator
     - name: Operator Source Code
