Replace infinispan/server with quay.io/infinispan/server #671

--- a/deploy/operator.yaml
+++ b/deploy/operator.yaml
@@ -36,4 +36,4 @@ spec:
             - name: OPERATOR_NAME
               value: "infinispan-operator"
             - name: RELATED_IMAGE_OPENJDK
-              value: "infinispan/server:12.0"
+              value: "quay.io/infinispan/server:12.0"
