--- a/deploy/operator-install.yaml
+++ b/deploy/operator-install.yaml
@@ -812,6 +812,13 @@ spec:
                     certServiceName:
                       type: string
                     type:
+                      description: CertificateSourceType specifies all the possible
+                        sources for the encryption certificate
+                      enum:
+                      - Service
+                      - service
+                      - Secret
+                      - secret
                       type: string
                   type: object
                 endpointSecretName:
@@ -925,6 +932,13 @@ spec:
                     certServiceName:
                       type: string
                     type:
+                      description: CertificateSourceType specifies all the possible
+                        sources for the encryption certificate
+                      enum:
+                      - Service
+                      - service
+                      - Secret
+                      - secret
                       type: string
                   type: object
                 endpointSecretName:
